--- a/asporto/index.html
+++ b/asporto/index.html
@@ -86,30 +86,28 @@
 			</div>
 		</div>
 	</div>
-<!-- menu inizio -->
+<!-- menu -->
 	<div class="tabs-content" id="menupage-text">
-<!-- inizio tabbar switch-->
-    <div class="row" id="menupage-text">
-        <div class="medium-12 large-12 small-12 columns">
-            <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
-                <li class="tab-title active" role="presentational">
-                    <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
-                </li>
-            </ul>
+<!-- tabbar switch-->
+        <div class="row"">
+            <div class="medium-12 large-12 small-12 columns">
+                <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
+                    <li class="tab-title active" role="presentational">
+                        <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-<!-- fine tabbar switch-->
-<!-- tab inizio -->
-    <div class="tabs-content" id="menupage-text">
+<!-- tabbar switch fine-->
 <!-- cena -->
         <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
             <div class="row">
@@ -501,29 +499,30 @@
             </div>
         </section>
 <!-- Bevande fine -->
-    </div>
-<!-- tab fine -->
-<!-- inizio tabbar switch-->
-    <div class="row" id="menupage-text">
-        <div class="medium-12 large-12 small-12 columns">
-            <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
-                <li class="tab-title active" role="presentational">
-                    <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
-                </li>
-            </ul>
+<!-- tabbar switch-->
+        <div class="row">
+            <div class="medium-12 large-12 small-12 columns">
+                <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
+                    <li class="tab-title active" role="presentational">
+                        <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+        <div class="extra-space-hero">
+        </div>
+<!-- tabbar switch fine-->
     </div>
-    <div class="extra-space-hero"><br></div>
-<!-- fine tabbar switch-->
+<!-- menu fine-->
 <!-- call to action inizio -->
 		<div class="row">
 			<div class="medium-12 large-12 columns">
