--- a/menu/index.html
+++ b/menu/index.html
@@ -70,34 +70,34 @@
             <hr>
         </div>
     </div>
-<!-- inizio tabbar switch-->
-    <div class="row" id="menupage-text">
-        <div class="medium-12 large-12 small-12 columns">
-            <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
-                <li class="tab-title active" role="presentational">
-                    <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-<!-- fine tabbar switch-->
-<!-- tab inizio -->
+<!-- menu -->
     <div class="tabs-content" id="menupage-text">
+<!-- tabbar switch -->
+        <div class="row">
+            <div class="medium-12 large-12 small-12 columns">
+                <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
+                    <li class="tab-title active" role="presentational">
+                        <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+<!-- tabbar switch fine -->
 <!-- cena -->
         <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
             <div class="row">
@@ -616,7 +616,7 @@
             </div>
         </section>
 <!-- vino fine -->
-<!-- Bevande -->
+<!-- bevande -->
         <section class="content" role="tabpanel" aria-hidden="false" id="bevanda">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
@@ -671,8 +671,8 @@
                 </div>
             </div>
         </section>
-<!-- Bevande fine -->
-<!-- Liquori -->
+<!-- bevande fine -->
+<!-- liquori -->
         <section class="content" role="tabpanel" aria-hidden="false" id="liquore">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
@@ -735,8 +735,8 @@
                 </div>
             </div>
         </section>
-<!-- Liquori fine -->
-<!-- Drinks -->
+<!-- liquori fine -->
+<!-- drinks -->
         <section class="content" role="tabpanel" aria-hidden="false" id="drinks">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
@@ -771,35 +771,36 @@
             </div>
         </section>
 <!-- drinks fine -->
-    </div>
-<!-- tab fine -->
-<!-- inizio tabbar switch-->
-    <div class="row" id="menupage-text">
-        <div class="medium-12 large-12 small-12 columns extra-space-hero">
-            <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
-                <li class="tab-title active" role="presentational">
-                    <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                    <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
-                </li>
-                <li class="tab-title" role="presentational">
-                <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
-                </li>
-            </ul>
+<!-- tabbar switch-->
+        <div class="row">
+            <div class="medium-12 large-12 small-12 columns">
+                <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:true" role="tablist">
+                    <li class="tab-title active" role="presentational">
+                        <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cibo</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#vino" role="tab" tabindex="2" aria-selected="false" controls="vino">Vini</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#bevanda" role="tab" tabindex="3" aria-selected="false" controls="bevanda">Bevande</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                        <a href="#liquore" role="tab" tabindex="4" aria-selected="false" controls="liquore">Liquori</a>
+                    </li>
+                    <li class="tab-title" role="presentational">
+                    <a href="#drinks" role="tab" tabindex="5" aria-selected="false" controls="drinks">Drinks</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+        <div class="extra-space-hero"><br>
+        </div>
+<!-- tabbar switch fine-->
     </div>
-    <div class="extra-space-hero"><br></div>
-<!-- fine tabbar switch-->
+<!-- menu fine-->
 <!-- inizio footer -->
 	<footer class="panel-footer">
 		<div class="row">
