--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -46,7 +46,7 @@
             <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
             <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
             <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-            <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+            <li class="toggle"><a href="javascript:void(0)"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
 <!-- fine navbar con hamburger -->
