--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
-				<hr>
 			</div>
 		</div>
 		<div class="row">
 			<div class="medium-6 large-6 end columns">
-			<h2>Ristorante</h2>
+			<h3>Ristorante</h3>
 				<div class="row">
 					<div class="small-12 columns ">
 						<ul class="orari-schedule no-bullet">
@@ -127,8 +126,8 @@
 				</div>
 			</div>
 			<div class="medium-6 large-6 columns">
-				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
-				<span class="hide-for-small"><h2>Asporto</h2></span>
+				<span class="show-for-small extra-space"><h3>Asporto</h3></span>
+				<span class="hide-for-small"><h3>Asporto</h3></span>
 				<ul class="orari-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
 							<li><span>Martedì:</span>chiuso</li>
