--- a/menu/index.html
+++ b/menu/index.html
@@ -796,13 +796,11 @@
 				</ul>
 			</div>
 		</div>
-		<div class="extra-space-hero"><br>
-		</div>
 <!-- tabbar switch fine-->
 	</div>
 <!-- menu fine-->
 <!-- inizio footer -->
-	<footer class="panel-footer">
+	<footer class="panel-footer extra-space-footer">
 		<div class="row">
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
