--- a/asporto/index.html
+++ b/asporto/index.html
@@ -47,7 +47,7 @@
 <!-- navbar con hamburger -->
 	<nav  id="hamburger">
 		<ul class="menu1">
-			<li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+			<li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
 			</li>
 			<li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
 			<li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
