--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="https://www.beerstrot.it"/>
-	<link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+	<link rel="stylesheet" href="css/app.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -48,7 +48,7 @@
 <!-- inizio navbar con hamburger -->
 	<nav id="hamburger">
 		<ul class="menu1" >
-			<li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+			<li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
 			</li>
 			<li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
 			<li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
@@ -62,7 +62,7 @@
 	<header class="homepage-hero" itemscope itemtype="http://schema.org/Restaurant">
 		<div class="row clearfix">
 			<div class="small-12 columns">
-				<h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama gli hamburger goduriosi<br>e la birra artigianale</h1>
+				<h1 class="text-highlight" itemprop="description">Ca' Vecchia Beerstrot:<br>per chi ama gli hamburger goduriosi<br>e la birra artigianale</h1>
 			</div>
 		</div>
 	</header>
@@ -167,7 +167,7 @@
 				<a role="button" href="https://www.beerstrot.it/menu/"><img src="https://www.beerstrot.it/asset/img/medium/menu.jpg" alt="Hamburger Doppio" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<p>Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona.</p>
+				<p>A <strong>Ca' Vecchia Beerstrot</strong> siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona.</p>
 				<p>Gli Hamburger, di nostra produzione, contengono solo carne di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
 				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità: Birrificio dei Castelli, Mukkeller, MC-77, Resina.</p>
 				<a itemprop="menu" role="button" href="https://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
