--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -49,7 +49,7 @@
 	<!-- <nav class="top-bar" data-topbar role="navigation">
 		<ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
 			<li class="name">
-				 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+				 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
 			</li>
 			<li class="toggle-topbar menu-icon">
 				<a href="#"><span></span></a>
@@ -71,7 +71,7 @@
  -->
 	<nav id="hamburger">
         <ul class="menu1">
-            <li class="logo active"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+            <li class="logo active"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
             <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
