--- a/contatti/index.html
+++ b/contatti/index.html
@@ -49,7 +49,10 @@
             <li class="toggle"><a href="javascript:void(0)"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
-    <a href="https://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><img class="image-hero" src="https://www.beerstrot.it/asset/img/large/mappa-hero.jpg" alt="Ca' Vecchia Beerstrot mappa"/></a>
+    <a href="https://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+        <img class="image-hero hide-for-small" src="https://www.beerstrot.it/asset/img/large/mappa-hero.jpg" alt="Ca' Vecchia Beerstrot mappa"/>
+        <img class="image-hero show-for-small" src="../asset/img/large/mappa-mobile-hero.jpg" alt="Ca' Vecchia Beerstrot mappa"/>
+    </a>
     <header class="row">
         <div class="medium-12 large-12 columns">
             <h1>Contatti</h1>
