--- a/menu/index.html
+++ b/menu/index.html
@@ -368,7 +368,7 @@
 						<!-- <li>
 							<h3>Palmares</h3>
 							<p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
-						</li>  -->
+						</li> -->
 						<!-- <li>
 							<h3>Ape Regina</h3>
 							<p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
@@ -384,6 +384,10 @@
 					   <!-- <li>
 							<h3>Mirabilia</h3>
 							<p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
+						</li> -->
+						<!-- <li>
+							<h3>Tutor</h3>
+							<p>West Coast Pale Ale 5,9% <br><em>Birrificio dei Castelli</em></p>
 						</li> -->
 						<li>
 							<h3>Brevis Furor</h3>
@@ -420,6 +424,10 @@
 						<!-- <li>
 							<h3>Extrema Ratio</h3>
 							<p>Doppia IPA 7,4% <br><em>Birrificio dei Castelli</em></p>
+						</li> -->
+						<!-- <li>
+							<h3>Decennium</h3>
+							<p>Triple IPA 10% <br><em>Birrificio dei Castelli</em></p>
 						</li> -->
 						<!-- <li>
 							<h3>Breaking Hops</h3>
@@ -497,10 +505,10 @@
 								<h3>Hattori Hanzo 50cl<span class="price">6</span></h3>
 								<p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
 							</li>
-							<!-- <li>
+							<li>
 								<h3>Calix 33cl<span class="price">6</span></h3>
 								<p>Stout 6,7% <br><em>Birrificio dei Castelli</em></p>
-							</li> -->
+							</li>
 							<!-- <li>
 								<h3>Lu Carzolà 33cl<span class="price">6</span></h3>
 								<p>Coffee stout all'anice 8% <br><em>Birrificio MC-77</em></p>
