--- a/menu/index.html
+++ b/menu/index.html
@@ -533,6 +533,10 @@
 							<h3>Rosso Piceno Doc<span class="price">Quarto 3 / Litro 9</span></h3>
 							<p>Vino Biologico<br><em>Cantina Collevite</em></p>
 						</li>
+						<li>
+							<h3>Passerina Doc<span class="price">Quarto 3 / Litro 9</span></h3>
+							<p>Vino Biologico<br><em>Cantina Collevite</em></p>
+						</li>
 						<!-- <li>
 							<h3>Novis Lacrima<span class="price">Quarto 3 / Litro 8</span></h3>
 							<p><em>Cantina di Tavignano</em></p>
