--- a/contatti/index.html
+++ b/contatti/index.html
@@ -101,7 +101,7 @@
         <div class="medium-6 large-6 columns">
             <div class="flex-video widescreen vimeo extra-space-image-tab-contatti">
                 <a role="button" href="https://www.beerstrot.it/video/">
-                    <iframe  width="1280" height="720" src="https://www.youtube.com/embed/jVDlGrvFMyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe  width="1280" height="720" src="https://youtu.be/2-gEPGITgeI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </a>
             </div>
         </div>
