--- a/contatti/index.html
+++ b/contatti/index.html
@@ -99,13 +99,17 @@
             <h6>Codice SDI: USAL8PV</h6>
         </div>
         <div class="medium-6 large-6 columns">
-            <div class="flex-video widescreen vimeo extra-space-image-tab-contatti">
-                <a role="button" href="https://www.beerstrot.it/video/">
-                    <iframe  width="1280" height="720" src="https://youtu.be/2-gEPGITgeI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </a>
+            <div class="flex-video widescreen extra-space-image-tab-contatti">
+                <video controls width="250">
+                    <source src="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4" type="video/mp4">
+                        <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4"></a>
+                         Download the
+                        <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4">MP4</a>
+                        video.
+                </video>
             </div>
         </div>
-    </div>
+   </div>
 <!-- inizio footer -->
     <footer class="panel-footer extra-space-footer">
         <div class="row">
