--- a/contatti/index.html
+++ b/contatti/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="medium-6 large-6 columns">
             <div class="flex-video widescreen extra-space-image-tab-contatti">
-                <video controls width="250">
+                <video controls width="250" poster="https://www.beerstrot.it/asset/img/large/interior-look-feel.jpg">
                     <source src="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4" type="video/mp4">
                         <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4"></a>
                          Download the
