--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-				<div class="flex-video widescreen extra-space-image-tab-contatti" poster="https://www.beerstrot.it/asset/img/large/interior-look-feel.jpg">
-                <video controls width="250">
+				<div class="flex-video widescreen">
+                <video controls width="250" poster="https://www.beerstrot.it/asset/img/large/interior-look-feel.jpg">
                     <source src="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4" type="video/mp4">
                         <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4"></a>
                          Download the
