--- a/contatti/index.html
+++ b/contatti/index.html
@@ -100,13 +100,16 @@
         </div>
         <div class="medium-6 large-6 columns">
             <div class="flex-video widescreen extra-space-image-tab-contatti">
-                <video controls width="250" poster="https://www.beerstrot.it/asset/img/large/interior-look-feel.jpg">
+                <!-- <video controls width="250" poster="https://www.beerstrot.it/asset/img/large/interior-look-feel.jpg">
                     <source src="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4" type="video/mp4">
                         <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4"></a>
                          Download the
                         <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4">MP4</a>
                         video.
-                </video>
+                </video> -->
+                <a role="button" href="https://www.beerstrot.it/video/">
+                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/UwwjuMZnki0?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </a>
             </div>
         </div>
    </div>
