--- a/index.html
+++ b/index.html
@@ -199,16 +199,19 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-				<div class="flex-video widescreen">
-                <video controls width="250" poster="https://www.beerstrot.it/asset/img/large/interior-look-feel.jpg">
+				<div class="flex-video widescreen extra-space-video">
+                <!-- <video controls width="250" poster="https://www.beerstrot.it/asset/img/large/interior-look-feel.jpg">
                     <source src="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4" type="video/mp4">
                         <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4"></a>
                          Download the
                         <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4">MP4</a>
                         video.
-                </video>
+                </video> -->
+					<a role="button" href="https://www.beerstrot.it/video/">
+						<iframe width="1280" height="720" src="https://www.youtube.com/embed/2-gEPGITgeI?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</a>
+				</div>
             </div>
-			</div>
 			<div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
 				<p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
 				<a role="button" href="https://www.beerstrot.it/contatti/">Contattaci &rarr;</a>
