--- a/menu/index.html
+++ b/menu/index.html
@@ -534,7 +534,7 @@
 							<p>Vino Biologico<br><em>Cantina Collevite</em></p>
 						</li>
 						<li>
-							<h3>Passerina Doc<span class="price">Quarto 3 / Litro 9</span></h3>
+							<h3>Passerina Igt<span class="price">Quarto 3 / Litro 9</span></h3>
 							<p>Vino Biologico<br><em>Cantina Collevite</em></p>
 						</li>
 						<!-- <li>
