--- a/contatti/index.html
+++ b/contatti/index.html
@@ -107,7 +107,7 @@
                         <a href="https://www.beerstrot.it/asset/video/Ca-vecchia-beerstrot.mp4">MP4</a>
                         video.
                 </video> -->
-                <a role="button" href="https://www.beerstrot.it/video/">
+                <a role="button" href="https://www.youtube.com/embed/UwwjuMZnki0?rel=0">
                     <iframe width="1280" height="720" src="https://www.youtube.com/embed/UwwjuMZnki0?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </a>
             </div>
