--- a/menu/index.html
+++ b/menu/index.html
@@ -542,7 +542,7 @@
 							<p><em>Cantina di Tavignano</em></p>
 						</li> -->
 						<li>
-							<h3>Verdicchio Matelica DOC<span class="price">Quarto 3 / Litro 8</span></h3>
+							<h3>Verdicchio Matelica Doc<span class="price">Quarto 3 / Litro 8</span></h3>
 							<p><em>Cantina Belisario</em></p>
 						</li>
 					</ul>
@@ -553,15 +553,15 @@
 					<h2 class="subheader">Vino Bottiglia / Calice</h2>
 					<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
 						<li>
-							<h3>Cervidoni DOC<span class="price">13,5 / 3</span></h3>
+							<h3>Cervidoni Doc<span class="price">13,5 / 3</span></h3>
 							<p>Rosso Piceno <br><em>Cantina di Tavignano</em></p>
 						</li>
 						<li>
-							<h3>Serrano DOC<span class="price">14,5 / 3,5</span></h3>
+							<h3>Serrano Doc<span class="price">14,5 / 3,5</span></h3>
 							<p>Rosso Conero <br><em>Cantina Umani Ronchi</em></p>
 						</li>
 						<li>
-							<h3>Rubico DOC<span class="price">15,5 / 3,5</span></h3>
+							<h3>Rubico Doc<span class="price">15,5 / 3,5</span></h3>
 							<p>Lacrima di Morro D'Alba <br><em>Cantina Marotti Campi</em></p>
 						</li>
 						<!-- <li>
@@ -573,11 +573,11 @@
 							<p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
 						</li> -->
 						<li>
-							<h3>Villa Bianchi DOC<span class="price">14,5 / 3,5</span></h3>
+							<h3>Villa Bianchi Doc<span class="price">14,5 / 3,5</span></h3>
 							<p>Verdicchio dei Castelli di Jesi Classico <br><em>Cantina Umani Ronchi</em></p>
 						</li>
 						<li>
-							<h3>Casal di Serra DOC<span class="price">18 / 4</span></h3>
+							<h3>Casal di Serra Doc<span class="price">18 / 4</span></h3>
 							<p>Verdicchio dei Castelli di Jesi Classico Superiore Biologico<br><em>Cantina Umani Ronchi</em></p>
 						</li>
 						<!-- <li>
@@ -589,11 +589,11 @@
 							<p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
 						</li> -->
 						<li>
-							<h3>Gewurztraminer DOC<span class="price">18 / 4</span></h3>
+							<h3>Gewurztraminer Doc<span class="price">18 / 4</span></h3>
 							<p><em>Cantina H.Lun</em></p>
 						</li>
 						<li>
-							<h3>Ribolla Gialla IGT<span class="price">18 / 4</span></h3>
+							<h3>Ribolla Gialla Igt<span class="price">18 / 4</span></h3>
 							<p><em>Cantina Branko</em></p>
 						</li>
 						<!-- <li>
@@ -605,7 +605,7 @@
 							<p>Brut <br><em>Cantina Serre di Pederiva</em></p>
 						</li> -->
 						<li>
-							<h3>Prosecco Lovre DOCG<span class="price">16 / 3,5</span></h3>
+							<h3>Prosecco Lovre Docg<span class="price">16 / 3,5</span></h3>
 							<p>Extra Dry <br><em>Cantina Serre di Pederiva</em></p>
 						</li>
 					</ul>
