--- a/asporto/index.html
+++ b/asporto/index.html
@@ -16,7 +16,7 @@
 	<meta name="twitter:url" content="https://www.beerstrot.it/asporto/"/>
 	<meta property="fb:app_id" content="1549149915357715"/>
 	<meta property="og:url" content="https://www.beerstrot.it/asporto/"/>
-	<meta property="og:type" content="article"/>
+	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="Ca' Vecchia Beerstrot Asporto e Consegne"/>
 	<meta property="og:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo."/>
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/asporto-background.jpg"/>
