--- a/menu/index.html
+++ b/menu/index.html
@@ -367,7 +367,7 @@
 						</li> -->
 						<li>
 							<h3>Palmares</h3>
-							<p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
+							<p>Red Ale 5,6% <br><em>Birrificio dei Castelli</em></p>
 						</li>
 						<!-- <li>
 							<h3>Ape Regina</h3>
