--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<meta name="twitter:description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
 	<meta name="twitter:image" content="https://www.beerstrot.it/asset/img/large/background-home-estiva.jpg"/>
 	<meta name="twitter:url" content="https://www.beerstrot.it"/>
+	<meta name="facebook-domain-verification" content="fxzo40kysvi2o1zl3cucmdnl1chg6s" />
 	<meta property="fb:app_id" content="1549149915357715"/>
 	<meta property="og:url" content="https://www.beerstrot.it"/>
 	<meta property="og:type" content="website"/>
