--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -119,13 +119,46 @@
 						<li>
 							<h3>Bocconcini di Pollo<span class="price">5,9</span></h3>
 							<p>Serviti con salsa piccante
-							<small>Contiene: Glutine, Uova, Latte</small></p>
+								<small>Contiene: Glutine, Uova, Latte</small>
+							</p>
+<!-- modale -->
 							<div class="extra-space-hero">
- 								<div class="counter">
-    								<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
-    								<a class="counter__increment" href="javascript:void(0)">+</a>
-    								<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
-							  	</div>
+								<a href="#" class="button tiny" data-reveal-id="myModal">+</a>
+								<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br><br>
+									<img src="../asset/img/_src/large/estivo.jpg" alt="">
+									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
+									<p>Ingredienti: Bocconcini, sale, pepe <br>	<small>Contiene: Glutine, Uova, Latte</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder=".........."></textarea>
+										</label>
+									</div>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+								    <div class="counter extra-space left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button tiny extra-space right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
+								<!-- <div class="counter">
+									<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+									<a class="counter__increment" href="javascript:void(0)">+</a>
+									<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+								</div> -->
 							</div>
 						</li>
 						<li>
@@ -133,11 +166,11 @@
 							<p>Il più tipico street food marchigiano
 							<small>Contiene: Glutine, Uova, Latte, Sedano</small></p>
 							<div class="extra-space-hero">
- 								<div class="counter">
-    								<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
-    								<a class="counter__increment" href="javascript:void(0)">+</a>
-    								<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
-							  	</div>
+								<div class="counter">
+									<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+									<a class="counter__increment" href="javascript:void(0)">+</a>
+									<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+								</div>
 							</div>
 						</li>
 						<li>
@@ -145,11 +178,11 @@
 							<p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa
 							<small>Contiene: Glutine, Uova, Latte</small></p>
 							<div class="extra-space-hero">
- 								<div class="counter">
-    								<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
-    								<a class="counter__increment" href="javascript:void(0)">+</a>
-    								<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
-							  	</div>
+								<div class="counter">
+									<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+									<a class="counter__increment" href="javascript:void(0)">+</a>
+									<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+								</div>
 							</div>
 						</li>
 						<li>
@@ -157,11 +190,11 @@
 							<p>Cipolla rossa in tempura
 							<small>Contiene: Glutine, Latte, Crostacei</small></p>
 							<div class="extra-space-hero">
- 								<div class="counter">
-    								<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
-    								<a class="counter__increment" href="javascript:void(0)">+</a>
-    								<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
-							  	</div>
+								<div class="counter">
+									<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+									<a class="counter__increment" href="javascript:void(0)">+</a>
+									<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+								</div>
 							</div>
 						</li>
 						<li>
@@ -210,6 +243,40 @@
 							<h3>Beerstrot<span class="price">11,9 / doppio 15,9</span></h3>
 							<p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
 							<small>Contiene: Glutine, Latte, Uova</small></p>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="myModal1">+</a>
+								<div id="myModal1" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br><br>
+									<img src="../asset/img/_src/large/deciso.jpg" alt="">
+									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
+									<p>Ingredienti: Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
+									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+								    <div class="counter left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button tiny right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
 						</li>
 						<li>
 							<h3>New York<span class="price">10,5 / doppio 14,5</span></h3>
