--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -128,7 +128,9 @@
 									<br><br>
 									<img src="../asset/img/_src/large/estivo.jpg" alt="">
 									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
-									<p>Ingredienti: Bocconcini, sale, pepe <br>	<small>Contiene: Glutine, Uova, Latte</small></p>
+									<p>Ingredienti: Bocconcini, sale, pepe <br>
+										<small>Contiene: Glutine, Uova, Latte</small>
+									</p>
 									<div class="extra-space-hero">
 										<label><strong>Note</strong>
 											<textarea maxlength="200" id="" placeholder=".........."></textarea>
@@ -248,7 +250,7 @@
 								<a href="#" class="button tiny" data-reveal-id="myModal1">+</a>
 								<div id="myModal1" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
-									<img src="../asset/img/_src/large/deciso.jpg" alt="">
+									<img src="https://www.beerstrot.it/asset/img/_src/large/deciso.jpg" alt="">
 									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
 									<p>Ingredienti: Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
 									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
