--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -247,7 +247,7 @@
 							<small>Contiene: Glutine, Latte, Uova</small></p>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<a href="#" class="button tiny" data-reveal-id="myModal1">+</a>
+								<a href="#" class="button right" data-reveal-id="myModal1">+</a>
 								<div id="myModal1" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/_src/large/deciso.jpg" alt="">
