--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -249,8 +249,7 @@
 							<div class="extra-space-hero">
 								<a href="#" class="button tiny" data-reveal-id="myModal1">+</a>
 								<div id="myModal1" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-									<br>
-									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="">
+									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space" >
 									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
 									<p>Ingredienti: Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
 									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
