--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -248,7 +248,7 @@
 <!-- modale -->
 							<div class="extra-space-hero">
 								<a href="#" class="button tiny" data-reveal-id="myModal1">+</a>
-								<div id="myModal1" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<div id="myModal1" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br>
 									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
 									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
@@ -274,7 +274,7 @@
 										<a class="counter__increment" href="javascript:void(0)">+</a>
 										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
 									</div>
-								  	<a href="#" class="button tiny right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<a href="#" class="button small right" data-reveal-id="myModal">Aggiungi al carrello</a>
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
